--- a/WDSI_GEN.ipynb
+++ b/WDSI_GEN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "15968076-26f4-45e4-8e41-81e0d71af94d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "51bd38c0-c60e-4b38-8a4f-d39d28f8d4c9",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "f944432e-b79e-4b1d-a84a-5102650e7533",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "id": "6d41ce13-3850-47c1-8f64-f7ba01f295f2",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "80dd3466-f136-43be-949e-0c337fc3856c",
    "metadata": {},
    "outputs": [],
@@ -81,21 +81,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "id": "b532c742-1e96-441f-936c-1d5528401888",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def roulette_wheel_selection(p):\n",
-    "   c = np.cumsum(p)\n",
-    "   r = sum(p) * np.random.rand()\n",
-    "   ind = np.argwhere(r <= c)\n",
-    "   return ind[0][0]"
+    "def roulette_wheel_selection(scores):\n",
+    "    suma = np.sum(scores)\n",
+    "    procents = [] \n",
+    "    for i in range(0,len(scores)):\n",
+    "        procents.append(scores[i]/suma)\n",
+    "    arr_of_chance = []\n",
+    "    \n",
+    "    for i in range(0,len(scores)):\n",
+    "        for j in range(0,int(scores[i] * 100)):\n",
+    "            arr_of_chance.append(i)\n",
+    "    \n",
+    "    return random.choice(arr_of_chance)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "5d1ebab1-46c5-4a1f-b8b0-9d9fcc7fdc99",
    "metadata": {},
    "outputs": [],
@@ -104,26 +112,26 @@
     "    new_pop = []\n",
     "    new_scores = []\n",
     "    \n",
-    "    first_index = roulette_wheel_selection(scores)\n",
-    "    second_index = first_index\n",
-    "    while first_index  == second_index:\n",
-    "        second_index = roulette_wheel_selection(scores)\n",
-    "        \n",
-    "    for i in range(0,int(len(pop)/2)):\n",
+    "    for i in range(0,int(len(scores)/2)):\n",
+    "        first_index = roulette_wheel_selection(scores)\n",
+    "        second_index = first_index\n",
+    "        while first_index  == second_index:\n",
+    "            second_index = roulette_wheel_selection(scores)\n",
+    "            \n",
     "        child1, child2 = make_new_chromosomes(pop[first_index],pop[second_index])\n",
     "        new_pop.append(child1)\n",
     "        new_pop.append(child2)\n",
     "    \n",
     "    for i in range(0,len(pop)):\n",
     "        new_scores.append(fitness_function(super_chr,new_pop[i]))\n",
-    "    \n",
+    "    print(new_scores)\n",
     "    return new_pop,new_scores\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "id": "69dac38a-41a8-4b6e-97ca-56c442deb4ab",
    "metadata": {},
    "outputs": [],
@@ -170,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 21,
    "id": "85f09786-b8de-4888-83f9-9eb8c4759600",
    "metadata": {},
    "outputs": [
@@ -179,72 +187,84 @@
      "output_type": "stream",
      "text": [
       "start population\n",
-      "[[0, 1, 1, 0, 1, 0], [1, 1, 1, 1, 1, 0], [0, 0, 0, 0, 1, 1], [1, 0, 0, 1, 1, 1], [1, 1, 0, 0, 1, 0], [0, 1, 1, 1, 0, 1]]\n",
+      "[[0, 0, 1, 1, 0, 0], [1, 1, 1, 1, 0, 1], [0, 1, 0, 0, 1, 0], [1, 0, 1, 0, 0, 0], [0, 1, 0, 0, 1, 1], [1, 1, 1, 0, 0, 0]]\n",
       "start population scores\n",
-      "[0.3333333333333333, 0.3333333333333333, 0.8333333333333334, 0.8333333333333334, 0.6666666666666666, 0.16666666666666666]\n",
+      "[0.16666666666666666, 0.3333333333333333, 0.5, 0.5, 0.6666666666666666, 0.3333333333333333]\n",
+      "[0.5, 0.6666666666666666, 0.5, 0.3333333333333333, 0.16666666666666666, 0.6666666666666666]\n",
       "population 0\n",
-      "[[1, 0, 1, 0, 1, 1], [0, 1, 0, 1, 1, 1], [1, 0, 0, 1, 1, 0], [0, 1, 1, 0, 1, 1], [1, 0, 1, 0, 1, 0], [0, 1, 0, 1, 1, 1]]\n",
+      "[[0, 1, 0, 0, 1, 0], [1, 0, 1, 0, 0, 1], [0, 0, 0, 0, 1, 0], [0, 0, 1, 1, 0, 1], [0, 1, 1, 1, 0, 1], [1, 1, 0, 0, 1, 0]]\n",
       "population scores 0\n",
-      "[0.6666666666666666, 0.5, 0.6666666666666666, 0.5, 0.6666666666666666, 0.5]\n",
+      "[0.5, 0.6666666666666666, 0.5, 0.3333333333333333, 0.16666666666666666, 0.6666666666666666]\n",
+      "[0.3333333333333333, 0.16666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
       "population 1\n",
-      "[[1, 0, 1, 0, 1, 1], [0, 1, 1, 0, 1, 0], [1, 0, 1, 0, 1, 1], [0, 1, 1, 0, 1, 0], [1, 0, 1, 0, 1, 1], [0, 1, 1, 0, 1, 0]]\n",
+      "[[0, 0, 1, 1, 0, 1], [0, 1, 1, 1, 0, 1], [1, 1, 0, 0, 1, 0], [0, 0, 0, 0, 1, 0], [1, 0, 1, 0, 0, 1], [1, 1, 0, 0, 1, 0]]\n",
       "population scores 1\n",
-      "[0.8333333333333334, 0.3333333333333333, 0.8333333333333334, 0.3333333333333333, 0.8333333333333334, 0.3333333333333333]\n",
+      "[0.3333333333333333, 0.16666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
+      "[0.6666666666666666, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
       "population 2\n",
-      "[[0, 1, 1, 0, 1, 1], [1, 0, 1, 0, 1, 0], [0, 1, 1, 0, 1, 1], [1, 0, 1, 0, 1, 0], [0, 0, 1, 0, 1, 1], [1, 1, 1, 0, 1, 0]]\n",
+      "[[0, 0, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0], [0, 0, 1, 1, 0, 1], [1, 0, 1, 0, 0, 1], [1, 1, 0, 0, 1, 0], [0, 0, 0, 0, 1, 0]]\n",
       "population scores 2\n",
-      "[0.5, 0.6666666666666666, 0.5, 0.6666666666666666, 0.6666666666666666, 0.5]\n",
+      "[0.6666666666666666, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
+      "[0.6666666666666666, 0.6666666666666666, 0.5, 0.8333333333333334, 0.3333333333333333, 0.6666666666666666]\n",
       "population 3\n",
-      "[[1, 1, 1, 0, 1, 1], [0, 0, 1, 0, 1, 0], [0, 1, 1, 0, 1, 1], [0, 0, 1, 0, 1, 0], [1, 1, 1, 0, 1, 1], [0, 0, 1, 0, 1, 0]]\n",
+      "[[1, 1, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0], [0, 0, 1, 0, 0, 1], [1, 0, 0, 0, 1, 0], [0, 0, 1, 1, 0, 1], [0, 0, 0, 0, 1, 0]]\n",
       "population scores 3\n",
-      "[0.6666666666666666, 0.5, 0.6666666666666666, 0.5, 0.6666666666666666, 0.5]\n",
+      "[0.6666666666666666, 0.6666666666666666, 0.5, 0.8333333333333334, 0.3333333333333333, 0.6666666666666666]\n",
+      "[0.6666666666666666, 0.16666666666666666, 0.3333333333333333, 0.6666666666666666, 0.5, 0.3333333333333333]\n",
       "population 4\n",
-      "[[1, 1, 1, 0, 1, 0], [0, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 0], [0, 1, 1, 0, 1, 1], [1, 0, 1, 0, 1, 0], [0, 1, 1, 0, 1, 1]]\n",
+      "[[1, 1, 1, 0, 1, 1], [0, 0, 1, 1, 0, 0], [0, 1, 1, 0, 1, 0], [1, 0, 1, 0, 0, 1], [0, 0, 1, 0, 0, 1], [0, 0, 1, 1, 0, 1]]\n",
       "population scores 4\n",
-      "[0.5, 0.6666666666666666, 0.6666666666666666, 0.5, 0.6666666666666666, 0.5]\n",
+      "[0.6666666666666666, 0.16666666666666666, 0.3333333333333333, 0.6666666666666666, 0.5, 0.3333333333333333]\n",
+      "[0.5, 0.3333333333333333, 0.5, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666]\n",
       "population 5\n",
-      "[[0, 0, 1, 0, 1, 0], [1, 1, 1, 0, 1, 1], [0, 0, 1, 0, 1, 0], [1, 1, 1, 0, 1, 1], [0, 1, 1, 0, 1, 0], [1, 0, 1, 0, 1, 1]]\n",
+      "[[1, 0, 1, 0, 0, 0], [0, 0, 1, 1, 0, 1], [0, 0, 1, 0, 0, 1], [1, 0, 1, 0, 0, 1], [0, 0, 1, 1, 0, 1], [1, 0, 1, 0, 0, 1]]\n",
       "population scores 5\n",
-      "[0.5, 0.6666666666666666, 0.5, 0.6666666666666666, 0.3333333333333333, 0.8333333333333334]\n",
+      "[0.5, 0.3333333333333333, 0.5, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666]\n",
+      "[0.5, 0.6666666666666666, 0.5, 0.5, 0.5, 0.6666666666666666]\n",
       "population 6\n",
-      "[[0, 1, 1, 0, 1, 0], [0, 0, 1, 0, 1, 1], [1, 1, 1, 0, 1, 0], [0, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 0], [0, 1, 1, 0, 1, 1]]\n",
+      "[[0, 0, 0, 0, 0, 1], [1, 0, 1, 0, 0, 1], [0, 0, 1, 0, 0, 1], [1, 0, 1, 1, 0, 0], [0, 0, 1, 0, 0, 1], [1, 0, 1, 0, 0, 1]]\n",
       "population scores 6\n",
-      "[0.5, 0.6666666666666666, 0.5, 0.6666666666666666, 0.6666666666666666, 0.5]\n",
+      "[0.5, 0.6666666666666666, 0.5, 0.5, 0.5, 0.6666666666666666]\n",
+      "[0.8333333333333334, 0.16666666666666666, 0.6666666666666666, 0.6666666666666666, 0.5, 0.6666666666666666]\n",
       "population 7\n",
-      "[[1, 0, 1, 0, 1, 1], [0, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 1], [0, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 1], [0, 0, 1, 0, 1, 0]]\n",
+      "[[1, 0, 0, 0, 0, 1], [0, 0, 1, 1, 0, 0], [1, 0, 1, 1, 0, 1], [0, 0, 0, 0, 0, 1], [0, 0, 1, 0, 0, 1], [1, 0, 1, 0, 0, 1]]\n",
       "population scores 7\n",
-      "[0.8333333333333334, 0.5, 0.8333333333333334, 0.5, 0.8333333333333334, 0.5]\n",
+      "[0.8333333333333334, 0.16666666666666666, 0.6666666666666666, 0.6666666666666666, 0.5, 0.6666666666666666]\n",
+      "[0.6666666666666666, 0.5, 0.3333333333333333, 0.8333333333333334, 0.6666666666666666, 0.5]\n",
       "population 8\n",
-      "[[1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1]]\n",
+      "[[0, 0, 0, 0, 0, 1], [0, 0, 1, 0, 0, 1], [0, 0, 1, 1, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 1, 0, 0, 1], [1, 0, 1, 1, 0, 1]]\n",
       "population scores 8\n",
-      "[0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334]\n",
+      "[0.6666666666666666, 0.5, 0.3333333333333333, 0.8333333333333334, 0.6666666666666666, 0.5]\n",
+      "[0.8333333333333334, 0.5, 0.6666666666666666, 0.8333333333333334, 0.8333333333333334, 0.3333333333333333]\n",
       "population 9\n",
-      "[[1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 1, 1, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1]]\n",
+      "[[1, 0, 0, 0, 0, 1], [0, 0, 1, 0, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1], [0, 0, 1, 1, 0, 1]]\n",
       "population scores 9\n",
-      "[0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334]\n",
+      "[0.8333333333333334, 0.5, 0.6666666666666666, 0.8333333333333334, 0.8333333333333334, 0.3333333333333333]\n",
+      "[0.8333333333333334, 0.8333333333333334, 0.6666666666666666, 0.6666666666666666, 0.8333333333333334, 0.8333333333333334]\n",
       "population 10\n",
-      "[[1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 0, 0, 1, 1], [1, 0, 1, 0, 1, 1]]\n",
+      "[[1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 1, 1], [1, 0, 1, 0, 0, 1], [0, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1]]\n",
       "population scores 10\n",
-      "[0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334, 0.8333333333333334]\n",
+      "[0.8333333333333334, 0.8333333333333334, 0.6666666666666666, 0.6666666666666666, 0.8333333333333334, 0.8333333333333334]\n",
+      "[1.0, 0.6666666666666666, 0.8333333333333334, 1.0, 0.8333333333333334, 1.0]\n",
       "population 11\n",
-      "[[1, 0, 0, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 1, 0, 1, 1], [1, 0, 0, 0, 1, 1], [1, 1, 0, 0, 1, 1], [1, 0, 1, 0, 1, 1]]\n",
+      "[[1, 0, 0, 0, 1, 1], [0, 1, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 1, 1], [1, 0, 0, 0, 0, 1], [0, 0, 0, 0, 1, 1]]\n",
       "population scores 11\n",
-      "[1.0, 0.8333333333333334, 0.8333333333333334, 1.0, 1.0, 0.8333333333333334]\n"
+      "[1.0, 0.6666666666666666, 0.8333333333333334, 1.0, 0.8333333333333334, 1.0]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "([[1, 0, 0, 0, 1, 1],\n",
-       "  [1, 0, 1, 0, 1, 1],\n",
-       "  [1, 0, 1, 0, 1, 1],\n",
+       "  [0, 1, 0, 0, 0, 1],\n",
+       "  [1, 0, 0, 0, 0, 1],\n",
        "  [1, 0, 0, 0, 1, 1],\n",
-       "  [1, 1, 0, 0, 1, 1],\n",
-       "  [1, 0, 1, 0, 1, 1]],\n",
-       " [1.0, 0.8333333333333334, 0.8333333333333334, 1.0, 1.0, 0.8333333333333334])"
+       "  [1, 0, 0, 0, 0, 1],\n",
+       "  [0, 0, 0, 0, 1, 1]],\n",
+       " [1.0, 0.6666666666666666, 0.8333333333333334, 1.0, 0.8333333333333334, 1.0])"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,6 +285,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b09c52ab-5a04-4f19-a7af-93de36428c4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71b22417-d24d-4934-beb4-861749c1b822",
    "metadata": {},
    "outputs": [],
    "source": []
