--- a/WDSI_GEN.ipynb
+++ b/WDSI_GEN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "15968076-26f4-45e4-8e41-81e0d71af94d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "51bd38c0-c60e-4b38-8a4f-d39d28f8d4c9",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "f944432e-b79e-4b1d-a84a-5102650e7533",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "6d41ce13-3850-47c1-8f64-f7ba01f295f2",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "80dd3466-f136-43be-949e-0c337fc3856c",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "id": "b532c742-1e96-441f-936c-1d5528401888",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "id": "5d1ebab1-46c5-4a1f-b8b0-9d9fcc7fdc99",
    "metadata": {},
    "outputs": [],
@@ -111,6 +111,7 @@
     "def make_new_popul(super_chr,scores,pop):\n",
     "    new_pop = []\n",
     "    new_scores = []\n",
+    "\n",
     "    \n",
     "    for i in range(0,int(len(scores)/2)):\n",
     "        first_index = roulette_wheel_selection(scores)\n",
@@ -121,17 +122,16 @@
     "        child1, child2 = make_new_chromosomes(pop[first_index],pop[second_index])\n",
     "        new_pop.append(child1)\n",
     "        new_pop.append(child2)\n",
-    "    \n",
     "    for i in range(0,len(pop)):\n",
     "        new_scores.append(fitness_function(super_chr,new_pop[i]))\n",
-    "    print(new_scores)\n",
+    "\n",
     "    return new_pop,new_scores\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "69dac38a-41a8-4b6e-97ca-56c442deb4ab",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,12 @@
     "        new_pop, new_score = make_new_popul(super_chr,score,pop)\n",
     "        \n",
     "        for j in range(0,len(pop)):\n",
-    "            mutation(new_pop[j],chance_mut)\n",
+    "            new_pop[j] = mutation(new_pop[j],chance_mut)\n",
+    "        \n",
+    "        for j in range(0,len(pop)):\n",
+    "            new_score[j] = fitness_function(super_chr,new_pop[j])\n",
+    "        \n",
+    "        \n",
     "        \n",
     "        \n",
     "        print(\"population \" + str(i))\n",
@@ -166,7 +171,7 @@
     "        print(\"population scores \" + str(i))\n",
     "        print(new_score)\n",
     "        \n",
-    "        if 1 in new_score:\n",
+    "        if super_chr in new_pop:\n",
     "            pop = new_pop\n",
     "            score = new_score\n",
     "            return pop, score\n",
@@ -178,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "id": "85f09786-b8de-4888-83f9-9eb8c4759600",
    "metadata": {},
    "outputs": [
@@ -187,84 +192,69 @@
      "output_type": "stream",
      "text": [
       "start population\n",
-      "[[0, 0, 1, 1, 0, 0], [1, 1, 1, 1, 0, 1], [0, 1, 0, 0, 1, 0], [1, 0, 1, 0, 0, 0], [0, 1, 0, 0, 1, 1], [1, 1, 1, 0, 0, 0]]\n",
+      "[[0, 0, 0, 1, 0, 1], [0, 1, 1, 0, 1, 0], [1, 0, 0, 1, 1, 0], [1, 0, 0, 1, 0, 0], [1, 0, 1, 0, 1, 0], [1, 1, 1, 1, 1, 1]]\n",
       "start population scores\n",
-      "[0.16666666666666666, 0.3333333333333333, 0.5, 0.5, 0.6666666666666666, 0.3333333333333333]\n",
-      "[0.5, 0.6666666666666666, 0.5, 0.3333333333333333, 0.16666666666666666, 0.6666666666666666]\n",
+      "[0.5, 0.3333333333333333, 0.6666666666666666, 0.5, 0.6666666666666666, 0.5]\n",
       "population 0\n",
-      "[[0, 1, 0, 0, 1, 0], [1, 0, 1, 0, 0, 1], [0, 0, 0, 0, 1, 0], [0, 0, 1, 1, 0, 1], [0, 1, 1, 1, 0, 1], [1, 1, 0, 0, 1, 0]]\n",
+      "[[0, 1, 1, 1, 0, 0], [1, 0, 0, 0, 1, 0], [1, 0, 1, 0, 1, 0], [0, 0, 0, 1, 1, 0], [1, 1, 1, 0, 1, 0], [1, 0, 1, 1, 0, 0]]\n",
       "population scores 0\n",
-      "[0.5, 0.6666666666666666, 0.5, 0.3333333333333333, 0.16666666666666666, 0.6666666666666666]\n",
-      "[0.3333333333333333, 0.16666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
+      "[0.0, 0.8333333333333334, 0.6666666666666666, 0.5, 0.5, 0.3333333333333333]\n",
       "population 1\n",
-      "[[0, 0, 1, 1, 0, 1], [0, 1, 1, 1, 0, 1], [1, 1, 0, 0, 1, 0], [0, 0, 0, 0, 1, 0], [1, 0, 1, 0, 0, 1], [1, 1, 0, 0, 1, 0]]\n",
+      "[[1, 0, 1, 0, 1, 0], [0, 0, 0, 1, 1, 0], [1, 0, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 1, 1, 0, 1, 0], [0, 0, 0, 1, 1, 0]]\n",
       "population scores 1\n",
-      "[0.3333333333333333, 0.16666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
-      "[0.6666666666666666, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
+      "[0.6666666666666666, 0.5, 0.6666666666666666, 0.6666666666666666, 0.5, 0.5]\n",
       "population 2\n",
-      "[[0, 0, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0], [0, 0, 1, 1, 0, 1], [1, 0, 1, 0, 0, 1], [1, 1, 0, 0, 1, 0], [0, 0, 0, 0, 1, 0]]\n",
+      "[[1, 0, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 0, 1, 1, 1, 0], [0, 0, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 0, 1, 0, 1, 0]]\n",
       "population scores 2\n",
-      "[0.6666666666666666, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
-      "[0.6666666666666666, 0.6666666666666666, 0.5, 0.8333333333333334, 0.3333333333333333, 0.6666666666666666]\n",
+      "[0.6666666666666666, 0.6666666666666666, 0.5, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
       "population 3\n",
-      "[[1, 1, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0], [0, 0, 1, 0, 0, 1], [1, 0, 0, 0, 1, 0], [0, 0, 1, 1, 0, 1], [0, 0, 0, 0, 1, 0]]\n",
+      "[[1, 0, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0]]\n",
       "population scores 3\n",
-      "[0.6666666666666666, 0.6666666666666666, 0.5, 0.8333333333333334, 0.3333333333333333, 0.6666666666666666]\n",
-      "[0.6666666666666666, 0.16666666666666666, 0.3333333333333333, 0.6666666666666666, 0.5, 0.3333333333333333]\n",
+      "[0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
       "population 4\n",
-      "[[1, 1, 1, 0, 1, 1], [0, 0, 1, 1, 0, 0], [0, 1, 1, 0, 1, 0], [1, 0, 1, 0, 0, 1], [0, 0, 1, 0, 0, 1], [0, 0, 1, 1, 0, 1]]\n",
+      "[[1, 1, 0, 0, 1, 0], [0, 1, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 0]]\n",
       "population scores 4\n",
-      "[0.6666666666666666, 0.16666666666666666, 0.3333333333333333, 0.6666666666666666, 0.5, 0.3333333333333333]\n",
-      "[0.5, 0.3333333333333333, 0.5, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666]\n",
+      "[0.6666666666666666, 0.5, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
       "population 5\n",
-      "[[1, 0, 1, 0, 0, 0], [0, 0, 1, 1, 0, 1], [0, 0, 1, 0, 0, 1], [1, 0, 1, 0, 0, 1], [0, 0, 1, 1, 0, 1], [1, 0, 1, 0, 0, 1]]\n",
+      "[[0, 1, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0]]\n",
       "population scores 5\n",
-      "[0.5, 0.3333333333333333, 0.5, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666]\n",
-      "[0.5, 0.6666666666666666, 0.5, 0.5, 0.5, 0.6666666666666666]\n",
+      "[0.5, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
       "population 6\n",
-      "[[0, 0, 0, 0, 0, 1], [1, 0, 1, 0, 0, 1], [0, 0, 1, 0, 0, 1], [1, 0, 1, 1, 0, 0], [0, 0, 1, 0, 0, 1], [1, 0, 1, 0, 0, 1]]\n",
+      "[[0, 1, 0, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 1, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0]]\n",
       "population scores 6\n",
-      "[0.5, 0.6666666666666666, 0.5, 0.5, 0.5, 0.6666666666666666]\n",
-      "[0.8333333333333334, 0.16666666666666666, 0.6666666666666666, 0.6666666666666666, 0.5, 0.6666666666666666]\n",
+      "[0.5, 0.6666666666666666, 0.5, 0.6666666666666666, 0.6666666666666666, 0.6666666666666666]\n",
       "population 7\n",
-      "[[1, 0, 0, 0, 0, 1], [0, 0, 1, 1, 0, 0], [1, 0, 1, 1, 0, 1], [0, 0, 0, 0, 0, 1], [0, 0, 1, 0, 0, 1], [1, 0, 1, 0, 0, 1]]\n",
+      "[[1, 1, 1, 0, 1, 0], [1, 0, 0, 0, 1, 0], [0, 1, 0, 0, 1, 0], [1, 0, 1, 0, 1, 0], [0, 1, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0]]\n",
       "population scores 7\n",
-      "[0.8333333333333334, 0.16666666666666666, 0.6666666666666666, 0.6666666666666666, 0.5, 0.6666666666666666]\n",
-      "[0.6666666666666666, 0.5, 0.3333333333333333, 0.8333333333333334, 0.6666666666666666, 0.5]\n",
+      "[0.5, 0.8333333333333334, 0.5, 0.6666666666666666, 0.3333333333333333, 0.6666666666666666]\n",
       "population 8\n",
-      "[[0, 0, 0, 0, 0, 1], [0, 0, 1, 0, 0, 1], [0, 0, 1, 1, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 1, 0, 0, 1], [1, 0, 1, 1, 0, 1]]\n",
+      "[[1, 0, 1, 0, 1, 0], [1, 0, 0, 0, 1, 0], [0, 1, 1, 0, 1, 0], [1, 1, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0], [0, 1, 0, 0, 1, 0]]\n",
       "population scores 8\n",
-      "[0.6666666666666666, 0.5, 0.3333333333333333, 0.8333333333333334, 0.6666666666666666, 0.5]\n",
-      "[0.8333333333333334, 0.5, 0.6666666666666666, 0.8333333333333334, 0.8333333333333334, 0.3333333333333333]\n",
+      "[0.6666666666666666, 0.8333333333333334, 0.3333333333333333, 0.6666666666666666, 0.6666666666666666, 0.5]\n",
       "population 9\n",
-      "[[1, 0, 0, 0, 0, 1], [0, 0, 1, 0, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1], [0, 0, 1, 1, 0, 1]]\n",
+      "[[1, 0, 1, 0, 1, 0], [1, 0, 0, 0, 1, 1], [1, 1, 0, 0, 1, 0], [1, 0, 1, 0, 1, 0], [1, 0, 0, 0, 1, 0], [1, 1, 0, 0, 1, 0]]\n",
       "population scores 9\n",
-      "[0.8333333333333334, 0.5, 0.6666666666666666, 0.8333333333333334, 0.8333333333333334, 0.3333333333333333]\n",
-      "[0.8333333333333334, 0.8333333333333334, 0.6666666666666666, 0.6666666666666666, 0.8333333333333334, 0.8333333333333334]\n",
-      "population 10\n",
-      "[[1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 1, 1], [1, 0, 1, 0, 0, 1], [0, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1]]\n",
-      "population scores 10\n",
-      "[0.8333333333333334, 0.8333333333333334, 0.6666666666666666, 0.6666666666666666, 0.8333333333333334, 0.8333333333333334]\n",
-      "[1.0, 0.6666666666666666, 0.8333333333333334, 1.0, 0.8333333333333334, 1.0]\n",
-      "population 11\n",
-      "[[1, 0, 0, 0, 1, 1], [0, 1, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 1, 1], [1, 0, 0, 0, 0, 1], [0, 0, 0, 0, 1, 1]]\n",
-      "population scores 11\n",
-      "[1.0, 0.6666666666666666, 0.8333333333333334, 1.0, 0.8333333333333334, 1.0]\n"
+      "[0.6666666666666666, 1.0, 0.6666666666666666, 0.6666666666666666, 0.8333333333333334, 0.6666666666666666]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "([[1, 0, 0, 0, 1, 1],\n",
-       "  [0, 1, 0, 0, 0, 1],\n",
-       "  [1, 0, 0, 0, 0, 1],\n",
+       "([[1, 0, 1, 0, 1, 0],\n",
        "  [1, 0, 0, 0, 1, 1],\n",
-       "  [1, 0, 0, 0, 0, 1],\n",
-       "  [0, 0, 0, 0, 1, 1]],\n",
-       " [1.0, 0.6666666666666666, 0.8333333333333334, 1.0, 0.8333333333333334, 1.0])"
+       "  [1, 1, 0, 0, 1, 0],\n",
+       "  [1, 0, 1, 0, 1, 0],\n",
+       "  [1, 0, 0, 0, 1, 0],\n",
+       "  [1, 1, 0, 0, 1, 0]],\n",
+       " [0.6666666666666666,\n",
+       "  1.0,\n",
+       "  0.6666666666666666,\n",
+       "  0.6666666666666666,\n",
+       "  0.8333333333333334,\n",
+       "  0.6666666666666666])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,6 +283,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71b22417-d24d-4934-beb4-861749c1b822",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d57d4ac-64a2-4ba8-8a02-14e9631bec82",
    "metadata": {},
    "outputs": [],
    "source": []
